[workspace]
resolver = "2"
members = [
    "dhkem",
    "frodo-kem",
    "ml-kem",
    "x-wing"
]

[profile.bench]
debug = true

[patch.crates-io]
crypto-common  = { git = "https://github.com/RustCrypto/traits.git" }
digest         = { git = "https://github.com/RustCrypto/traits.git" }
elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }
kem            = { git = "https://github.com/RustCrypto/traits.git" }

k256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p521 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

sha2 = { git = "https://github.com/RustCrypto/hashes.git" }
sha3 = { git = "https://github.com/RustCrypto/hashes.git" }

hmac = { git = "https://github.com/RustCrypto/MACs.git" }

hkdf = { git = "https://github.com/RustCrypto/KDFs.git" }

curve25519-dalek = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/rand-0.9" }
x25519-dalek     = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/rand-0.9" }
