[workspace]
resolver = "2"
members = [
    "dhkem",
    "frodo-kem",
    "ml-kem",
    "x-wing"
]

[profile.bench]
debug = true

[patch.crates-io]
ml-kem = { path = "./ml-kem" }

elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }
kem = { git = "https://github.com/RustCrypto/traits.git" }

primefield = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
k256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p521 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
