[workspace]
resolver = "2"
members = [
    "dhkem",
    "frodo-kem",
    "ml-kem",
    "x-wing"
]

[profile.bench]
debug = true

[patch.crates-io]
ml-kem = { path = "./ml-kem" }

elliptic-curve = { git = "https://github.com/RustCrypto/traits" }
ff = { git = "https://github.com/tarcieri/ff", branch = "rand_core/v0.10.0-rc-2" }
group = { git = "https://github.com/tarcieri/group", branch = "rand_core/v0.10.0-rc-2" }
p256 = { git = "https://github.com/RustCrypto/elliptic-curves " }
primefield = { git = "https://github.com/RustCrypto/elliptic-curves " }
x25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", branch = "rand_core/v0.10-rc" }
