[package]
name = "dhkem"
description = """
Pure Rust implementation of Key Encapsulation Mechanism (KEM) adapters for Elliptic Curve
Diffie Hellman (ECDH) protocols
"""
version = "0.1.0-pre.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/KEMs/tree/master/dhkem"
categories = ["cryptography"]
keywords = ["crypto", "ecdh", "ecc"]
readme = "README.md"

[dependencies]
kem = "0.4.0-rc.4"
rand_core = "0.10.0-rc-5"

# TODO(tarcieri): remove this and get these from `kem`
common = { package = "crypto-common", version = "0.2.0-rc.12" }

# optional dependencies
elliptic-curve = { version = "0.14.0-rc.23", optional = true, default-features = false }
k256 = { version = "0.14.0-rc.5", optional = true, default-features = false, features = ["arithmetic"] }
p256 = { version = "0.14.0-rc.5", optional = true, default-features = false, features = ["arithmetic"] }
p384 = { version = "0.14.0-rc.5", optional = true, default-features = false, features = ["arithmetic"] }
p521 = { version = "0.14.0-rc.5", optional = true, default-features = false, features = ["arithmetic"] }
x25519 = { version = "=3.0.0-pre.4", package = "x25519-dalek", optional = true, default-features = false }
zeroize = { version = "1.8.1", optional = true, default-features = false }

[dev-dependencies]
getrandom = { version = "0.4.0-rc.0", features = ["sys_rng"] }
hex-literal = "1"
hkdf = "0.13.0-rc.3"
sha2 = "0.11.0-rc.3"

[features]
default = ["zeroize"]

ecdh = ["dep:elliptic-curve", "elliptic-curve/ecdh"]
getrandom = ["kem/getrandom"]
k256 = ["dep:k256", "ecdh"]
p256 = ["dep:p256", "ecdh"]
p384 = ["dep:p384", "ecdh"]
p521 = ["dep:p521", "ecdh"]
x25519 = ["dep:x25519", "x25519/reusable_secrets"]
zeroize = ["dep:zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
