[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = "A pure rust implementation of FrodoKEM that also includes some experimental features for Zero-Knowledge Proof of Encrypted Correctness"
documentation = "https://docs.rs/frodo-kem-rs"
edition = "2021"
homepage = "https://github.com/mikelodder7/frodoKem"
keywords = ["quantum", "post", "zero", "knowledge", "encryption"]
license = "Apache-2.0 OR MIT"
name = "frodo-kem-rs"
readme = "README.md"
repository = "https://github.com/mikelodder7/frodoKem"
version = "0.2.0"

[features]
default = ["frodo640aes", "frodo640shake", "frodo976aes", "frodo976shake", "frodo1344aes", "frodo1344shake", "serde"]
hazmat = []
experimental = []
frodo640aes = ["aes"]
frodo640shake = []
frodo976aes = ["aes"]
frodo976shake = []
frodo1344aes = ["aes"]
frodo1344shake = []
serde = ["hex", "dep:serde"]

[dependencies]
aes = { version = "0.8", optional = true }
hex = { version = "0.4", optional = true }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }
subtle = "2.6"
sha3 = { version = "0.10" }
thiserror = "1.0"
zeroize = "1"

[dev-dependencies]
bincode = "1.3"
criterion = "0.5"
rand_chacha = "0.3"
rstest = "0.23"
safe-oqs = { version = "0.10", default-features = false, features = ["frodokem"] }
postcard = { version = "1.0", features = ["use-std"] }
serde_bare = "0.5"
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

[package.metadata.docs.rs]
features = ["frodo640aes", "frodo640shake", "frodo976aes", "frodo976shake", "frodo1344aes", "frodo1344shake", "serde"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "safe-oqs"
harness = false
path = "bench/safe_oqs.rs"
required-features = ["frodo640aes", "frodo640shake", "frodo976aes", "frodo976shake", "frodo1344aes", "frodo1344shake"]

