[package]
authors = ["The RustCrypto Team"]
categories = ["cryptography"]
description = "A pure rust implementation of FrodoKEM and eFrodoKEM"
documentation = "https://docs.rs/frodo-kem"
edition = "2021"
exclude = ["tests/**", "bench/**", "examples/**", ".github/**"]
homepage = "https://github.com/RustCrypto/KEMs"
keywords = ["quantum", "post", "zero", "knowledge", "encryption"]
license = "Apache-2.0 OR MIT"
name = "frodo-kem"
readme = "README.md"
repository = "https://github.com/RustCrypto/KEMs/frodo-kem"
version = "0.3.0"

[features]
default = [
    "frodo",
    "efrodo",
    "serde",
]
hazmat = []
efrodo = [
    "efrodo640aes",
    "efrodo640shake",
    "efrodo976aes",
    "efrodo976shake",
    "efrodo1344aes",
    "efrodo1344shake",
]
frodo = [
    "frodo640aes",
    "frodo640shake",
    "frodo976aes",
    "frodo976shake",
    "frodo1344aes",
    "frodo1344shake",
]
efrodo640aes = ["dep:aes"]
frodo640aes = ["dep:aes"]
efrodo640shake = []
frodo640shake = []
efrodo976aes = ["dep:aes"]
frodo976aes = ["dep:aes"]
efrodo976shake = []
frodo976shake = []
efrodo1344aes = ["dep:aes"]
frodo1344aes = ["dep:aes"]
efrodo1344shake = []
frodo1344shake = []
openssl = ["openssl-aes", "openssl-shake"]
openssl-aes = ["dep:openssl-sys"]
openssl-shake = ["dep:openssl-sys"]
serde = ["dep:hex", "dep:serde"]

[dependencies]
aes = { version = "0.8", optional = true }
hex = { version = "0.4", optional = true }
openssl-sys = { version = "0.9.104", optional = true }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serdect = "0.3.0-rc.0"
subtle = "2.6"
thiserror = "2.0"
zeroize = "1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
sha3 = { version = "0.10", features = ["asm"] }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
sha3 = { version = "0.10" }

[dev-dependencies]
aes = "0.8"
bincode = "1.3"
criterion = "0.5"
hex = "0.4"
hybrid-array = "0.2"
rand_chacha = "0.3"
rstest = "0.23"
safe-oqs = { version = "0.10", default-features = false, features = ["frodokem"] }
postcard = { version = "1.0", features = ["use-std"] }
serde_bare = "0.5"
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

[package.metadata.docs.rs]
features = [
    "frodo",
    "efrodo",
    "openssl",
    "serde",
]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
redundant_lifetimes = "deny"
redundant_imports = "deny"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = "warn"
unused_extern_crates = "deny"

[lints.clippy]
mod_module_files = "warn"
unwrap_used = "deny"

[[bench]]
name = "safe-oqs"
harness = false
path = "bench/safe_oqs.rs"
required-features = ["efrodo"]

