[package]
name = "frodo-kem"
version = "0.0.1"
description = "Pure Rust implementation of FrodoKEM and eFrodoKEM"
authors = ["The RustCrypto Team"]
documentation = "https://docs.rs/frodo-kem"
homepage = "https://github.com/RustCrypto/KEMs/tree/master/frodo-kem"
repository = "https://github.com/RustCrypto/KEMs"
categories = ["cryptography"]
keywords = ["quantum", "post", "zero", "knowledge", "encryption"]
exclude = ["tests/**", "bench/**", "examples/**", ".github/**"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[features]
default = [
    "frodo",
    "efrodo",
    "serde",
]
hazmat = []
efrodo = [
    "efrodo640aes",
    "efrodo640shake",
    "efrodo976aes",
    "efrodo976shake",
    "efrodo1344aes",
    "efrodo1344shake",
]
frodo = [
    "frodo640aes",
    "frodo640shake",
    "frodo976aes",
    "frodo976shake",
    "frodo1344aes",
    "frodo1344shake",
]
efrodo640aes = ["dep:aes"]
frodo640aes = ["dep:aes"]
efrodo640shake = []
frodo640shake = []
efrodo976aes = ["dep:aes"]
frodo976aes = ["dep:aes"]
efrodo976shake = []
frodo976shake = []
efrodo1344aes = ["dep:aes"]
frodo1344aes = ["dep:aes"]
efrodo1344shake = []
frodo1344shake = []
openssl = ["openssl-aes", "openssl-shake"]
openssl-aes = ["dep:openssl-sys"]
openssl-shake = ["dep:openssl-sys"]
serde = ["dep:hex", "dep:serde"]

[dependencies]
aes = { version = "0.8", optional = true }
hex = { version = "0.4", optional = true }
openssl-sys = { version = "0.9.104", optional = true }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serdect = "0.3"
subtle = "2.6"
thiserror = "2.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
sha3 = { version = "0.10", features = ["asm"] }
zeroize = { version = "1", features = ["aarch64"] }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
zeroize = { version = "1", features = ["simd"] }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
sha3 = { version = "0.10" }

[target.'cfg(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
zeroize = "1"

[dev-dependencies]
aes = "0.8"
bincode = "1.3"
criterion = "0.5"
hex = "0.4"
hybrid-array = "0.2"
rand_chacha = "0.3"
rstest = "0.24"
safe-oqs = { version = "0.10", default-features = false, features = ["frodokem"] }
postcard = { version = "1.0", features = ["use-std"] }
serde_bare = "0.5"
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

[package.metadata.docs.rs]
features = [
    "frodo",
    "efrodo",
    "openssl",
    "serde",
]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "safe-oqs"
harness = false
path = "benches/safe_oqs.rs"
required-features = ["efrodo"]

[[bench]]
name = "frodo"
harness = false
path = "benches/frodo.rs"
required-features = ["frodo"]
