[package]
name = "hqc-kem"
categories = ["cryptography"]
description = "Pure Rust implementation of HQC-KEM as described in FIPS 207"
edition = "2024"
homepage = "https://github.com/RustCrypto/KEMs/tree/master/hqc-kem"
keywords = ["hqc", "kem", "post-quantum", "cryptography", "codes"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustCrypto/KEMs"
version = "0.1.0"

[features]
default = ["kgen", "ecap", "dcap", "std"]
std = ["alloc"]
alloc = ["pkcs8?/alloc"]
kgen = []
ecap = []
dcap = []
kem = ["dep:kem_traits", "dep:hybrid-array", "dep:typenum", "kgen", "ecap", "dcap"]
pkcs8 = ["dep:const-oid", "dep:pkcs8", "alloc", "kgen"]
pem = ["pkcs8/pem"]
serde = ["dep:serdect", "dep:serde"]

[dependencies]
const-oid = { version = "0.10", optional = true }
hybrid-array = { version = "0.4.10", optional = true, features = ["extra-sizes"] }
kem_traits = { package = "kem", version = "0.3", optional = true }
pkcs8 = { version = "0.11", optional = true, default-features = false }
ctutils = { version = "0.4", default-features = false }
rand = { version = "0.10", default-features = false }
sha3 = { version = "0.12", default-features = false }
shake = { version = "0.1", default-features = false }
serdect = { version = "0.4", optional = true, default-features = false }
serde = { version = "1", features = ["derive"], optional = true, default-features = false }
subtle = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
typenum = { version = "1", optional = true }
zeroize = { version = "1", features = ["derive"], default-features = false }

[dev-dependencies]
criterion = "0.7"
hex = "0.4"
rand = { version = "0.10", features = ["thread_rng"] }

[[bench]]
name = "kem"
harness = false

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_parens = "deny"
unused_qualifications = "deny"
unused_results = "deny"
unused_extern_crates = "deny"

[lints.clippy]
unwrap_used = "deny"
panic = "warn"
panic_in_result_fn = "warn"
