[package]
name = "ml-kem"
description = """
Pure Rust implementation of the Module-Lattice-Based Key-Encapsulation Mechanism Standard
(formerly known as Kyber) as described in FIPS 203
"""
version = "0.3.0-pre.3"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/RustCrypto/KEMs/tree/master/ml-kem"
repository = "https://github.com/RustCrypto/KEMs"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "kyber", "lattice", "post-quantum"]
exclude = ["tests/key-gen.rs", "tests/key-gen.json", "tests/encap-decap.rs", "tests/encap-decap.json"]

[features]
alloc = ["pkcs8?/alloc"]

deterministic = [] # Expose deterministic encapsulation functions
getrandom = ["kem/getrandom"]
pem = ["pkcs8/pem"]
pkcs8 = ["dep:const-oid", "dep:pkcs8"]
zeroize = ["dep:zeroize"]

[dependencies]
kem = "0.4.0-rc.4"
hybrid-array = { version = "0.4.4", features = ["extra-sizes", "subtle"] }
rand_core = "0.10.0-rc-5"
sha3 = { version = "0.11.0-rc.3", default-features = false }
subtle = { version = "2", default-features = false }

# optional dependencies
const-oid = { version = "0.10.1", optional = true, default-features = false, features = ["db"] }
pkcs8 = { version = "0.11.0-rc.8", optional = true, default-features = false }
zeroize = { version = "1.8.1", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.7"
getrandom = { version = "0.4.0-rc.0", features = ["sys_rng"] }
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "1"
num-rational = { version = "0.4.2", default-features = false, features = ["num-bigint"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[[bench]]
name = "mlkem"
harness = false

[package.metadata.docs.rs]
all-features = true
