[package]
name = "x-wing"
description = "Pure Rust implementation of the X-Wing Key Encapsulation Mechanism (draft 06)"
version = "0.1.0-pre.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/RustCrypto/KEMs/tree/master/x-wing"
repository = "https://github.com/RustCrypto/KEMs/tree/master/x-wing"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "x-wing", "xwing", "kem", "post-quantum"]
exclude = ["src/test-vectors.json"]

[features]
os_rng = ["rand_core/os_rng"]
zeroize = ["dep:zeroize", "ml-kem/zeroize", "x25519-dalek/zeroize"]

[dependencies]
kem = "=0.4.0-pre.1"
ml-kem = { version = "=0.3.0-pre.2", default-features = false, features = ["deterministic"] }
rand_core = { version = "0.9.3", default-features = false }
sha3 = { version = "0.11.0-rc.0", default-features = false }
x25519-dalek = { version = "=3.0.0-pre.0", default-features = false, features = ["static_secrets"] }
zeroize = { version = "1.8.1", optional = true, default-features = true, features = ["zeroize_derive"] }

[dev-dependencies]
rand_core = { version = "0.9" }
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
